--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,16 @@
 .container {
-  border: 2px red solid;
   display: flex;
-
-
+  flex-direction: column;
+  align-items: center;
+  color: black;
+}
+.appName {
+  font-size: large;
+  margin: 0 auto;
+  font-family: 'Poiret One', cursive;
+  font-weight: bold;
+  font-size: 37px;
+}
+header {
+  font-size: small;
 }
